[package]
name = "websocket-message-send"
version = "0.1.0"
edition = "2021"

[dependencies]
eyre = "0.6.12"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros", "time", "sync"] }
tokio-util = "0.7"
tokio-websockets = { version = "0.8", default-features = false, features = ["client", "server", "getrandom", "ring"] }
